--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   		</div>
   		<!-- !=====  PRIMARY NAVIGATION (**Include**)  ====== -->
 		<nav id="primary">
-			<!-- MENU BAR -->
+			<!-- !MENU BAR -->
   			<ul class="container menubar">
   				<li class="tv"><a href="#"><i></i>TV's & Video</a></li>
   				<li class="audio"><a href="#"><i></i>Home Audio</a></li>
@@ -128,7 +128,64 @@
   			</ul>
   			<!-- !=====  SUBNAVIGATION  ====== -->
   			<div id="subnav" class="closed">
-  				<div id="video" class="container">
+  				<div id="tv" class="container">
+  					<div class="nav-content">
+  						<h2>HDTVs &amp; Video</h2>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Receivers & Components</a>
+  							<ul>
+  								<li><a href="#">Home Theater</a></li>
+  								<li><a href="#">Stereo</a></li>
+  								<li><a href="#">Integrated Amplifiers</a></li>
+  								<li><a href="#">Preamps &amp; Power Amps</a></li>
+  								<li><a href="#">Sonos Music Systems</a></li>
+  								<li><a href="#">Multi-room &amp; Amps</a></li>
+  								<li><a href="#">Multi-room Audio</a></li>
+  								<li><a href="#">Turntables &amp; Accessories</a></li>
+  								<li><a href="#">CD Players</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Speakers</a>
+  							<ul>
+  								<li><a href="#">Floor-standing</a></li>
+  								<li><a href="#">Bookshelf</a></li>
+  								<li><a href="#">Surround Sound Systems</a></li>
+  								<li><a href="#">Center Channel</a></li>
+  								<li><a href="#">Powered Subwoofers</a></li>
+  								<li><a href="#">In-ceiling</a></li>
+  								<li><a href="#">In-wall</a></li>
+  								<li><a href="#">Outdoor</a></li>
+  								<li><a href="#">iPod Speakers</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+	  						<a href="#" class="nav-title">Computer &amp; iTunes Hi-Fi</a>
+	  						<ul>
+	  							<li><a href="#">Computer Speakers</a></li>
+	  							<li><a href="#">Network Music Players</a></li>
+	  							<li><a href="#">Digital-to-Analog Converters</a></li>
+	  						</ul>
+	  					</div>
+	  					<div class="nav-column last">
+	  						<a href="#" class="nav-title">Accessories</a>
+	  						<ul>
+	  							<li><a href="#">All Headphones</a></li>
+	  							<li><a href="#">HDMI Cables</a></li>
+	  							<li><a href="#">Power Protection</a></li>
+	  							<li><a href="#">Furniture</a></li>
+	  							<li><a href="#">A/V Cables &amp; Installation</a></li>
+	  							<li><a href="#">Home Remote Controls</a></li>
+	  						</ul>
+	  					</div>
+  					</div>
+	  				<div class="nav-marketing">
+	  					<div class="nav-messaging">
+	  						Some Marketing Cool Stuff
+	  					</div>
+	  				</div><!-- end .nav-marketing -->
+  			</div><!-- end #video -->
+  			<div id="audio" class="container">
   					<div class="nav-content">
   						<h2>Home Audio</h2>
   						<div class="nav-column">
@@ -183,8 +240,236 @@
 	  					<div class="nav-messaging">
 	  						Some Marketing Cool Stuff
 	  					</div>
-	  				</div>
-  			</div>
+	  				</div><!-- end .nav-marketing -->
+  			</div><!-- end #audio -->
+  			<div id="portable" class="container">
+  					<div class="nav-content">
+  						<h2>Portable &amp; Headphones</h2>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Receivers & Components</a>
+  							<ul>
+  								<li><a href="#">Home Theater</a></li>
+  								<li><a href="#">Stereo</a></li>
+  								<li><a href="#">Integrated Amplifiers</a></li>
+  								<li><a href="#">Preamps &amp; Power Amps</a></li>
+  								<li><a href="#">Sonos Music Systems</a></li>
+  								<li><a href="#">Multi-room &amp; Amps</a></li>
+  								<li><a href="#">Multi-room Audio</a></li>
+  								<li><a href="#">Turntables &amp; Accessories</a></li>
+  								<li><a href="#">CD Players</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Speakers</a>
+  							<ul>
+  								<li><a href="#">Floor-standing</a></li>
+  								<li><a href="#">Bookshelf</a></li>
+  								<li><a href="#">Surround Sound Systems</a></li>
+  								<li><a href="#">Center Channel</a></li>
+  								<li><a href="#">Powered Subwoofers</a></li>
+  								<li><a href="#">In-ceiling</a></li>
+  								<li><a href="#">In-wall</a></li>
+  								<li><a href="#">Outdoor</a></li>
+  								<li><a href="#">iPod Speakers</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+	  						<a href="#" class="nav-title">Computer &amp; iTunes Hi-Fi</a>
+	  						<ul>
+	  							<li><a href="#">Computer Speakers</a></li>
+	  							<li><a href="#">Network Music Players</a></li>
+	  							<li><a href="#">Digital-to-Analog Converters</a></li>
+	  						</ul>
+	  					</div>
+	  					<div class="nav-column last">
+	  						<a href="#" class="nav-title">Accessories</a>
+	  						<ul>
+	  							<li><a href="#">All Headphones</a></li>
+	  							<li><a href="#">HDMI Cables</a></li>
+	  							<li><a href="#">Power Protection</a></li>
+	  							<li><a href="#">Furniture</a></li>
+	  							<li><a href="#">A/V Cables &amp; Installation</a></li>
+	  							<li><a href="#">Home Remote Controls</a></li>
+	  						</ul>
+	  					</div>
+  					</div>
+	  				<div class="nav-marketing">
+	  					<div class="nav-messaging">
+	  						Some Marketing Cool Stuff
+	  					</div>
+	  				</div><!-- end .nav-marketing -->
+  			</div><!-- end #portable -->
+  			<div id="computers" class="container">
+  					<div class="nav-content">
+  						<h2>Computers</h2>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Receivers & Components</a>
+  							<ul>
+  								<li><a href="#">Home Theater</a></li>
+  								<li><a href="#">Stereo</a></li>
+  								<li><a href="#">Integrated Amplifiers</a></li>
+  								<li><a href="#">Preamps &amp; Power Amps</a></li>
+  								<li><a href="#">Sonos Music Systems</a></li>
+  								<li><a href="#">Multi-room &amp; Amps</a></li>
+  								<li><a href="#">Multi-room Audio</a></li>
+  								<li><a href="#">Turntables &amp; Accessories</a></li>
+  								<li><a href="#">CD Players</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Speakers</a>
+  							<ul>
+  								<li><a href="#">Floor-standing</a></li>
+  								<li><a href="#">Bookshelf</a></li>
+  								<li><a href="#">Surround Sound Systems</a></li>
+  								<li><a href="#">Center Channel</a></li>
+  								<li><a href="#">Powered Subwoofers</a></li>
+  								<li><a href="#">In-ceiling</a></li>
+  								<li><a href="#">In-wall</a></li>
+  								<li><a href="#">Outdoor</a></li>
+  								<li><a href="#">iPod Speakers</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+	  						<a href="#" class="nav-title">Computer &amp; iTunes Hi-Fi</a>
+	  						<ul>
+	  							<li><a href="#">Computer Speakers</a></li>
+	  							<li><a href="#">Network Music Players</a></li>
+	  							<li><a href="#">Digital-to-Analog Converters</a></li>
+	  						</ul>
+	  					</div>
+	  					<div class="nav-column last">
+	  						<a href="#" class="nav-title">Accessories</a>
+	  						<ul>
+	  							<li><a href="#">All Headphones</a></li>
+	  							<li><a href="#">HDMI Cables</a></li>
+	  							<li><a href="#">Power Protection</a></li>
+	  							<li><a href="#">Furniture</a></li>
+	  							<li><a href="#">A/V Cables &amp; Installation</a></li>
+	  							<li><a href="#">Home Remote Controls</a></li>
+	  						</ul>
+	  					</div>
+  					</div>
+	  				<div class="nav-marketing">
+	  					<div class="nav-messaging">
+	  						Some Marketing Cool Stuff
+	  					</div>
+	  				</div><!-- end .nav-marketing -->
+  			</div><!-- end #computers -->
+  			<div id="cameras" class="container">
+  					<div class="nav-content">
+  						<h2>Cameras &amp; Camcorders</h2>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Receivers & Components</a>
+  							<ul>
+  								<li><a href="#">Home Theater</a></li>
+  								<li><a href="#">Stereo</a></li>
+  								<li><a href="#">Integrated Amplifiers</a></li>
+  								<li><a href="#">Preamps &amp; Power Amps</a></li>
+  								<li><a href="#">Sonos Music Systems</a></li>
+  								<li><a href="#">Multi-room &amp; Amps</a></li>
+  								<li><a href="#">Multi-room Audio</a></li>
+  								<li><a href="#">Turntables &amp; Accessories</a></li>
+  								<li><a href="#">CD Players</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Speakers</a>
+  							<ul>
+  								<li><a href="#">Floor-standing</a></li>
+  								<li><a href="#">Bookshelf</a></li>
+  								<li><a href="#">Surround Sound Systems</a></li>
+  								<li><a href="#">Center Channel</a></li>
+  								<li><a href="#">Powered Subwoofers</a></li>
+  								<li><a href="#">In-ceiling</a></li>
+  								<li><a href="#">In-wall</a></li>
+  								<li><a href="#">Outdoor</a></li>
+  								<li><a href="#">iPod Speakers</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+	  						<a href="#" class="nav-title">Computer &amp; iTunes Hi-Fi</a>
+	  						<ul>
+	  							<li><a href="#">Computer Speakers</a></li>
+	  							<li><a href="#">Network Music Players</a></li>
+	  							<li><a href="#">Digital-to-Analog Converters</a></li>
+	  						</ul>
+	  					</div>
+	  					<div class="nav-column last">
+	  						<a href="#" class="nav-title">Accessories</a>
+	  						<ul>
+	  							<li><a href="#">All Headphones</a></li>
+	  							<li><a href="#">HDMI Cables</a></li>
+	  							<li><a href="#">Power Protection</a></li>
+	  							<li><a href="#">Furniture</a></li>
+	  							<li><a href="#">A/V Cables &amp; Installation</a></li>
+	  							<li><a href="#">Home Remote Controls</a></li>
+	  						</ul>
+	  					</div>
+  					</div>
+	  				<div class="nav-marketing">
+	  					<div class="nav-messaging">
+	  						Some Marketing Cool Stuff
+	  					</div>
+	  				</div><!-- end .nav-marketing -->
+  			</div><!-- end #cameras -->
+  			<div id="appliances" class="container">
+  					<div class="nav-content">
+  						<h2>Appliances</h2>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Receivers & Components</a>
+  							<ul>
+  								<li><a href="#">Home Theater</a></li>
+  								<li><a href="#">Stereo</a></li>
+  								<li><a href="#">Integrated Amplifiers</a></li>
+  								<li><a href="#">Preamps &amp; Power Amps</a></li>
+  								<li><a href="#">Sonos Music Systems</a></li>
+  								<li><a href="#">Multi-room &amp; Amps</a></li>
+  								<li><a href="#">Multi-room Audio</a></li>
+  								<li><a href="#">Turntables &amp; Accessories</a></li>
+  								<li><a href="#">CD Players</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Speakers</a>
+  							<ul>
+  								<li><a href="#">Floor-standing</a></li>
+  								<li><a href="#">Bookshelf</a></li>
+  								<li><a href="#">Surround Sound Systems</a></li>
+  								<li><a href="#">Center Channel</a></li>
+  								<li><a href="#">Powered Subwoofers</a></li>
+  								<li><a href="#">In-ceiling</a></li>
+  								<li><a href="#">In-wall</a></li>
+  								<li><a href="#">Outdoor</a></li>
+  								<li><a href="#">iPod Speakers</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+	  						<a href="#" class="nav-title">Computer &amp; iTunes Hi-Fi</a>
+	  						<ul>
+	  							<li><a href="#">Computer Speakers</a></li>
+	  							<li><a href="#">Network Music Players</a></li>
+	  							<li><a href="#">Digital-to-Analog Converters</a></li>
+	  						</ul>
+	  					</div>
+	  					<div class="nav-column last">
+	  						<a href="#" class="nav-title">Accessories</a>
+	  						<ul>
+	  							<li><a href="#">All Headphones</a></li>
+	  							<li><a href="#">HDMI Cables</a></li>
+	  							<li><a href="#">Power Protection</a></li>
+	  							<li><a href="#">Furniture</a></li>
+	  							<li><a href="#">A/V Cables &amp; Installation</a></li>
+	  							<li><a href="#">Home Remote Controls</a></li>
+	  						</ul>
+	  					</div>
+  					</div>
+	  				<div class="nav-marketing">
+	  					<div class="nav-messaging">
+	  						Some Marketing Cool Stuff
+	  					</div>
+	  				</div><!-- end .nav-marketing -->
+  			</div><!-- end #appliances -->
   		</nav>
   	</header>
   	
