--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
 		<nav id="primary">
 			<!-- !MENU BAR -->
   			<ul class="container menubar">
-  				<li class="tv"><a href="#"><i></i>TV's & Video</a></li>
-  				<li class="audio"><a href="#"><i></i>Home Audio</a></li>
-  				<li class="portable"><a href="#"><i></i>Portable & Headphones</a></li>
-  				<li class="computers"><a href="#"><i></i>Computers</a></li>
-  				<li class="cameras"><a href="#"><i></i>Cameras & Camcorders</a></li>
-  				<li class="appliances"><a href="#"><i></i>Appliances</a></li>
+  				<li class="tv"><a href="javascript:void(0)"><i></i>TV's & Video</a></li>
+  				<li class="audio"><a href="javascript:void(0)"><i></i>Home Audio</a></li>
+  				<li class="portable"><a href="javascript:void(0)"><i></i>Portable & Headphones</a></li>
+  				<li class="computers"><a href="javascript:void(0)"><i></i>Computers</a></li>
+  				<li class="cameras"><a href="javascript:void(0)"><i></i>Cameras & Camcorders</a></li>
+  				<li class="appliances"><a href="javascript:void(0)"><i></i>Appliances</a></li>
   			</ul>
   			<!-- !=====  SUBMENUS  ====== -->
-  			<div id="submenu" class="closed">
+  			<div id="submenu">
   				<!-- SINGLE SUBMENU -->
   				<div id="tv" class="container">
   					<div class="pull-left">
@@ -156,6 +156,10 @@
 									<li><a href="#">Multi-room &amp; Amps</a></li>
 									<li><a href="#">Multi-room Audio</a></li>
 									<li><a href="#">Turntables &amp; Accessories</a></li>
+									<li><a href="#">Sonos Music Systems</a></li>
+									<li><a href="#">Multi-room &amp; Amps</a></li>
+									<li><a href="#">Multi-room Audio</a></li>
+									<li><a href="#">Turntables &amp; Accessories</a></li>
 								</ul>
 							</div>
 							<div class="span2">
@@ -167,6 +171,10 @@
 									<li><a href="#">Surround Sound Systems</a></li>
 									<li><a href="#">Center Channel</a></li>
 									<li><a href="#">Powered Subwoofers</a></li>
+									<li><a href="#">In-ceiling</a></li>
+									<li><a href="#">In-wall</a></li>
+									<li><a href="#">Outdoor</a></li>
+									<li><a href="#">iPod Speakers</a></li>
 									<li><a href="#">In-ceiling</a></li>
 									<li><a href="#">In-wall</a></li>
 									<li><a href="#">Outdoor</a></li>
@@ -197,11 +205,12 @@
 		  				</div>
 	  				</div>
 	  				<div class="span3 pull-right marketing">
-		  					<div class="ad-zone">
-		  						MARKETING ZONE
-		  					</div>
-		  				</div><!-- end .nav-marketing -->
+	  					<div class="ad-zone">
+	  						MARKETING ZONE
+	  					</div>
+	  				</div><!-- end .nav-marketing -->
 	  			</div>
+	  			<div class="clear"></div>
   				<div id="audio" class="container">
   					<div class="pull-left">
   						<div class="row">
@@ -266,10 +275,10 @@
 		  				</div>
 	  				</div>
 	  				<div class="span3 pull-right marketing">
-		  					<div class="ad-zone">
-		  						MARKETING ZONE
-		  					</div>
-		  				</div><!-- end .nav-marketing -->
+	  					<div class="ad-zone">
+	  						MARKETING ZONE
+	  					</div>
+	  				</div><!-- end .nav-marketing -->	
 	  			</div>
   			</div><!-- end #submenu -->
    		</nav>
